Search results are not visible. Fixes #248.

--- a/template/theme/sass/partials/_global.scss
+++ b/template/theme/sass/partials/_global.scss
@@ -28,7 +28,6 @@ body, html
 	position: relative;
 	height: 130px;
 	background: $sdk-ckeditor-color;
-	overflow: hidden;
 
 	a
 	{
